welcome.lessons.welcome.bat.bool1.Max1020.scala.code
def max1020(a:Int, b:Int):Int =  {
	if (b > a) {
	    var tempo:Int = a;
	    var a:Int = b;
	    var b:Int = tempo;
	  }
	  
	  // Knowing a is bigger, just check a first
	  if (a >= 10 && a <= 20) {
	  	return a;
	  }
	  if (b >= 10 && b <= 20) {
	  	return b;
	  }
	  	return 0
}	